--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,7 +1,2 @@
-<div class="row">
-  <div class="large-12 columns">
-    <h1>Welcome to Foundation for Sites</h1>
-  </div>
-</div> 
-
-
+{{> header}}
+{{> footer}}
